Bug 1698320 - replace __builtin_cpu_supports("vsx") with ppc_crypto_support() for clang. r=bbeurdouche

Differential Revision: https://phabricator.services.mozilla.com/D108354